kubernetes/apps/development/atlas/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atlas
  namespace: development
  labels:
    app.kubernetes.io/name: atlas
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: atlas
    app.kubernetes.io/component: app
