kubernetes/apps/development/atlas/app/httproute-internal.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas
  namespace: development
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Development"
    gethomepage.dev/name: "Atlas Research"
spec:
  hostnames:
    - "atlas.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: atlas
          port: 8000
